--- a/spacy_tutorials/tut1.ipynb
+++ b/spacy_tutorials/tut1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
        "654"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,6 +65,386 @@
    "source": [
     "doc = nlp(text)\n",
     "len(doc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The United States of America (U.S.A. or USA), commonly known as the United States (U.S. or US) or America, is a country primarily located in North America.\n",
+      "------------------------------\n",
+      "It consists of 50 states, a federal district, five major unincorporated territories, 326 Indian reservations, and some minor possessions.[j]\n",
+      "------------------------------\n",
+      "At 3.8 million square miles (9.8 million square kilometers), it is the world's third- or fourth-largest country by total area.[d]\n",
+      "------------------------------\n",
+      "The United States shares significant land borders with Canada to the north and Mexico to the south, as well as limited maritime borders with the Bahamas, Cuba, and Russia.[22]\n",
+      "------------------------------\n",
+      "With a population of more than 331 million people, it is the third most populous country in the world.\n",
+      "------------------------------\n",
+      "The national capital is Washington, D.C., and the most populous city is New York.\n",
+      "\n",
+      "\n",
+      "------------------------------\n",
+      "Paleo-Indians migrated from Siberia to the North American mainland at least 12,000 years ago, and European colonization began in the 16th century.\n",
+      "------------------------------\n",
+      "The United States emerged from the thirteen British colonies established along the East Coast.\n",
+      "------------------------------\n",
+      "Disputes over taxation and political representation with Great Britain led to the American Revolutionary War (1775–1783), which established independence.\n",
+      "------------------------------\n",
+      "In the late 18th century, the U.S. began expanding across North America, gradually obtaining new territories, sometimes through war, frequently displacing Native Americans, and admitting new states; by 1848, the United States spanned the continent.\n",
+      "------------------------------\n",
+      "Slavery was legal in the southern United States until the second half of the 19th century when the American Civil War led to its abolition.\n",
+      "------------------------------\n",
+      "The Spanish–American War and World War I established the U.S. as a world power, a status confirmed by the outcome of World War II.\n",
+      "\n",
+      "\n",
+      "------------------------------\n",
+      "During the Cold War, the United States fought the Korean War and the Vietnam War but avoided direct military conflict with the Soviet Union.\n",
+      "------------------------------\n",
+      "The two superpowers competed in the Space Race, culminating in the 1969 spaceflight that first landed humans on the Moon.\n",
+      "------------------------------\n",
+      "The Soviet Union's dissolution in 1991 ended the Cold War, leaving the United States as the world's sole superpower.\n",
+      "\n",
+      "\n",
+      "------------------------------\n",
+      "The United States is a federal republic and a representative democracy with three separate branches of government, including a bicameral legislature.\n",
+      "------------------------------\n",
+      "It is a founding member of the United Nations, World Bank, International Monetary Fund, Organization of American States, NATO, and other international organizations.\n",
+      "------------------------------\n",
+      "It is a permanent member of the United Nations Security Council.\n",
+      "------------------------------\n",
+      "Considered a melting pot of cultures and ethnicities, its population has been profoundly shaped by centuries of immigration.\n",
+      "------------------------------\n",
+      "The country ranks high in international measures of economic freedom, quality of life, education, and human rights, and has low levels of perceived corruption.\n",
+      "------------------------------\n",
+      "However, the country has received criticism concerning inequality related to race, wealth and income, the use of capital punishment, high incarceration rates, and lack of universal health care.\n",
+      "\n",
+      "\n",
+      "------------------------------\n",
+      "The United States is a highly developed country, accounts for approximately a quarter of global GDP, and is the world's largest economy.\n",
+      "------------------------------\n",
+      "By value, the United States is the world's largest importer and the second-largest exporter of goods.\n",
+      "------------------------------\n",
+      "Although its population is only 4.2% of the world's total, it holds 29.4% of the total wealth in the world, the largest share held by any country.\n",
+      "------------------------------\n",
+      "Making up more than a third of global military spending, it is the foremost military power in the world; and it is a leading political, cultural, and scientific force internationally.[23]\n",
+      "------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "for sent in doc.sents:\n",
+    "    print(sent.text)\n",
+    "    print(\"-\"*30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "The United States of America (U.S.A. or USA), commonly known as the United States (U.S. or US) or America, is a country primarily located in North America."
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sentence1 = list(doc.sents)[0]\n",
+    "sentence1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The DET det\n",
+      "United PROPN compound\n",
+      "States PROPN nsubj\n",
+      "of ADP prep\n",
+      "America PROPN pobj\n",
+      "( PUNCT punct\n",
+      "U.S.A. PROPN appos\n",
+      "or CCONJ cc\n",
+      "USA PROPN conj\n",
+      ") PUNCT punct\n"
+     ]
+    }
+   ],
+   "source": [
+    "for token in doc[:10]:\n",
+    "    print(token.text, token.pos_, token.dep_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The\n",
+      "America\n",
+      "GPE\n",
+      "I\n",
+      "States\n",
+      "Number=Sing\n"
+     ]
+    }
+   ],
+   "source": [
+    "tok = sentence1[2]\n",
+    "print(tok.left_edge)\n",
+    "print(tok.right_edge)\n",
+    "print(tok.ent_type_)\n",
+    "print(tok.ent_iob_)\n",
+    "print(tok.lemma_)\n",
+    "print(tok.morph)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## POS tagging"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The United States of America (U.S.A. or USA), commonly known as the United States (U.S. or US) or America, is a country primarily located in North America. It consists of 50 states, a federal district, five major unincorporated territories, 326 Indian reservations, and some minor possessions.[j] At 3.8 million square miles (9.8 million square kilometers), it is the world's third- or fourth-largest country by total area.[d] The United States shares significant land borders with Canada to the north and Mexico to the south, as well as limited maritime borders with the Bahamas, Cuba, and Russia.[22] With a population of more than 331 million people, it is the third most populous country in the world. The national capital is Washington, D.C., and the most populous city is New York.\n",
+      "\n",
+      "Paleo-Indians migrated from Siberia to the North American mainland at least 12,000 years ago, and European colonization began in the 16th century. The United States emerged from the thirteen British colonies established along the East Coast. Disputes over taxation and political representation with Great Britain led to the American Revolutionary War (1775–1783), which established independence. In the late 18th century, the U.S. began expanding across North America, gradually obtaining new territories, sometimes through war, frequently displacing Native Americans, and admitting new states; by 1848, the United States spanned the continent. Slavery was legal in the southern United States until the second half of the 19th century when the American Civil War led to its abolition. The Spanish–American War and World War I established the U.S. as a world power, a status confirmed by the outcome of World War II.\n",
+      "\n",
+      "During the Cold War, the United States fought the Korean War and the Vietnam War but avoided direct military conflict with the Soviet Union. The two superpowers competed in the Space Race, culminating in the 1969 spaceflight that first landed humans on the Moon. The Soviet Union's dissolution in 1991 ended the Cold War, leaving the United States as the world's sole superpower.\n",
+      "\n",
+      "The United States is a federal republic and a representative democracy with three separate branches of government, including a bicameral legislature. It is a founding member of the United Nations, World Bank, International Monetary Fund, Organization of American States, NATO, and other international organizations. It is a permanent member of the United Nations Security Council. Considered a melting pot of cultures and ethnicities, its population has been profoundly shaped by centuries of immigration. The country ranks high in international measures of economic freedom, quality of life, education, and human rights, and has low levels of perceived corruption. However, the country has received criticism concerning inequality related to race, wealth and income, the use of capital punishment, high incarceration rates, and lack of universal health care.\n",
+      "\n",
+      "The United States is a highly developed country, accounts for approximately a quarter of global GDP, and is the world's largest economy. By value, the United States is the world's largest importer and the second-largest exporter of goods. Although its population is only 4.2% of the world's total, it holds 29.4% of the total wealth in the world, the largest share held by any country. Making up more than a third of global military spending, it is the foremost military power in the world; and it is a leading political, cultural, and scientific force internationally.[23]\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = \"Vishwas enjoys playing football\"\n",
+    "doc2 = nlp(text)\n",
+    "print(doc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "POS token metadata:\n",
+    "text: the original token text\n",
+    "pos_ : the simple UPOS part-of-speech tag\n",
+    "dep_ : Syntactic dependency, i.e. the relation between tokens"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vishwas PROPN nsubj\n",
+      "enjoys VERB ROOT\n",
+      "playing VERB xcomp\n",
+      "football NOUN dobj\n"
+     ]
+    }
+   ],
+   "source": [
+    "for token in doc2:\n",
+    "    print(token.text, token.pos_, token.dep_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span class=\"tex2jax_ignore\"><svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" xml:lang=\"en\" id=\"0bcd94157bbc42438a843acd0a8e12c3-0\" class=\"displacy\" width=\"750\" height=\"224.5\" direction=\"ltr\" style=\"max-width: none; height: 224.5px; color: #000000; background: #ffffff; font-family: Arial; direction: ltr\">\n",
+       "<text class=\"displacy-token\" fill=\"currentColor\" text-anchor=\"middle\" y=\"134.5\">\n",
+       "    <tspan class=\"displacy-word\" fill=\"currentColor\" x=\"50\">Vishwas</tspan>\n",
+       "    <tspan class=\"displacy-tag\" dy=\"2em\" fill=\"currentColor\" x=\"50\">PROPN</tspan>\n",
+       "</text>\n",
+       "\n",
+       "<text class=\"displacy-token\" fill=\"currentColor\" text-anchor=\"middle\" y=\"134.5\">\n",
+       "    <tspan class=\"displacy-word\" fill=\"currentColor\" x=\"225\">enjoys</tspan>\n",
+       "    <tspan class=\"displacy-tag\" dy=\"2em\" fill=\"currentColor\" x=\"225\">VERB</tspan>\n",
+       "</text>\n",
+       "\n",
+       "<text class=\"displacy-token\" fill=\"currentColor\" text-anchor=\"middle\" y=\"134.5\">\n",
+       "    <tspan class=\"displacy-word\" fill=\"currentColor\" x=\"400\">playing</tspan>\n",
+       "    <tspan class=\"displacy-tag\" dy=\"2em\" fill=\"currentColor\" x=\"400\">VERB</tspan>\n",
+       "</text>\n",
+       "\n",
+       "<text class=\"displacy-token\" fill=\"currentColor\" text-anchor=\"middle\" y=\"134.5\">\n",
+       "    <tspan class=\"displacy-word\" fill=\"currentColor\" x=\"575\">football</tspan>\n",
+       "    <tspan class=\"displacy-tag\" dy=\"2em\" fill=\"currentColor\" x=\"575\">NOUN</tspan>\n",
+       "</text>\n",
+       "\n",
+       "<g class=\"displacy-arrow\">\n",
+       "    <path class=\"displacy-arc\" id=\"arrow-0bcd94157bbc42438a843acd0a8e12c3-0-0\" stroke-width=\"2px\" d=\"M70,89.5 C70,2.0 225.0,2.0 225.0,89.5\" fill=\"none\" stroke=\"currentColor\"/>\n",
+       "    <text dy=\"1.25em\" style=\"font-size: 0.8em; letter-spacing: 1px\">\n",
+       "        <textPath xlink:href=\"#arrow-0bcd94157bbc42438a843acd0a8e12c3-0-0\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">nsubj</textPath>\n",
+       "    </text>\n",
+       "    <path class=\"displacy-arrowhead\" d=\"M70,91.5 L62,79.5 78,79.5\" fill=\"currentColor\"/>\n",
+       "</g>\n",
+       "\n",
+       "<g class=\"displacy-arrow\">\n",
+       "    <path class=\"displacy-arc\" id=\"arrow-0bcd94157bbc42438a843acd0a8e12c3-0-1\" stroke-width=\"2px\" d=\"M245,89.5 C245,2.0 400.0,2.0 400.0,89.5\" fill=\"none\" stroke=\"currentColor\"/>\n",
+       "    <text dy=\"1.25em\" style=\"font-size: 0.8em; letter-spacing: 1px\">\n",
+       "        <textPath xlink:href=\"#arrow-0bcd94157bbc42438a843acd0a8e12c3-0-1\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">xcomp</textPath>\n",
+       "    </text>\n",
+       "    <path class=\"displacy-arrowhead\" d=\"M400.0,91.5 L408.0,79.5 392.0,79.5\" fill=\"currentColor\"/>\n",
+       "</g>\n",
+       "\n",
+       "<g class=\"displacy-arrow\">\n",
+       "    <path class=\"displacy-arc\" id=\"arrow-0bcd94157bbc42438a843acd0a8e12c3-0-2\" stroke-width=\"2px\" d=\"M420,89.5 C420,2.0 575.0,2.0 575.0,89.5\" fill=\"none\" stroke=\"currentColor\"/>\n",
+       "    <text dy=\"1.25em\" style=\"font-size: 0.8em; letter-spacing: 1px\">\n",
+       "        <textPath xlink:href=\"#arrow-0bcd94157bbc42438a843acd0a8e12c3-0-2\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">dobj</textPath>\n",
+       "    </text>\n",
+       "    <path class=\"displacy-arrowhead\" d=\"M575.0,91.5 L583.0,79.5 567.0,79.5\" fill=\"currentColor\"/>\n",
+       "</g>\n",
+       "</svg></span>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from spacy import displacy\n",
+    "displacy.render(doc2, style=\"dep\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The United States of America GPE\n",
+      "U.S.A. GPE\n",
+      "USA GPE\n",
+      "the United States GPE\n",
+      "U.S. GPE\n",
+      "US GPE\n",
+      "America GPE\n",
+      "North America LOC\n",
+      "50 CARDINAL\n",
+      "five CARDINAL\n",
+      "326 CARDINAL\n",
+      "Indian NORP\n",
+      "3.8 million square miles QUANTITY\n",
+      "9.8 million square kilometers QUANTITY\n",
+      "fourth ORDINAL\n",
+      "The United States GPE\n",
+      "Canada GPE\n",
+      "Mexico GPE\n",
+      "Bahamas GPE\n",
+      "Cuba GPE\n",
+      "more than 331 million CARDINAL\n",
+      "third ORDINAL\n",
+      "Washington GPE\n",
+      "D.C. GPE\n",
+      "New York GPE\n",
+      "Paleo-Indians NORP\n",
+      "Siberia LOC\n",
+      "North American NORP\n",
+      "at least 12,000 years ago DATE\n",
+      "European NORP\n",
+      "the 16th century DATE\n",
+      "The United States GPE\n",
+      "thirteen CARDINAL\n",
+      "British NORP\n",
+      "the East Coast LOC\n",
+      "Great Britain GPE\n",
+      "the American Revolutionary War ORG\n",
+      "the late 18th century DATE\n",
+      "U.S. GPE\n",
+      "North America LOC\n",
+      "Native Americans NORP\n",
+      "1848 DATE\n",
+      "the United States GPE\n",
+      "United States GPE\n",
+      "the second half of the 19th century DATE\n",
+      "the American Civil War ORG\n",
+      "Spanish NORP\n",
+      "World War EVENT\n",
+      "U.S. GPE\n",
+      "World War II EVENT\n",
+      "the Cold War EVENT\n",
+      "the United States GPE\n",
+      "the Korean War EVENT\n",
+      "the Vietnam War EVENT\n",
+      "the Soviet Union GPE\n",
+      "two CARDINAL\n",
+      "the Space Race FAC\n",
+      "1969 DATE\n",
+      "first ORDINAL\n",
+      "The Soviet Union's GPE\n",
+      "1991 DATE\n",
+      "the Cold War EVENT\n",
+      "the United States GPE\n",
+      "The United States GPE\n",
+      "three CARDINAL\n",
+      "the United Nations ORG\n",
+      "World Bank ORG\n",
+      "International Monetary Fund ORG\n",
+      "Organization of American States ORG\n",
+      "NATO ORG\n",
+      "the United Nations Security Council ORG\n",
+      "centuries DATE\n",
+      "The United States GPE\n",
+      "approximately a quarter DATE\n",
+      "the United States GPE\n",
+      "second ORDINAL\n",
+      "only 4.2% PERCENT\n",
+      "29.4% PERCENT\n",
+      "more than a third CARDINAL\n"
+     ]
+    }
+   ],
+   "source": [
+    "for ent in doc.ents:\n",
+    "    print(ent.text, ent.label_)\n"
    ]
   },
   {
