--- a/spacy_tutorials/03-pipeline.ipynb
+++ b/spacy_tutorials/03-pipeline.ipynb
@@ -30,6 +30,59 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "ruler = nlp.add_pipe(\"entity_ruler\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "West Chestertenfieldville GPE\n",
+      "Deeds PERSON\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/vishwasgowda/Desktop/tech-stack/venv/lib/python3.11/site-packages/spacy/pipeline/entityruler.py:405: UserWarning: [W036] The component 'entity_ruler' does not have any patterns defined.\n",
+      "  warnings.warn(Warnings.W036.format(name=self.name))\n"
+     ]
+    }
+   ],
+   "source": [
+    "doc = nlp(text)\n",
+    "\n",
+    "for ent in doc.ents:\n",
+    "    print(ent.text, ent.label_)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "patterns = [\n",
+    "    {\"label\":\"GPE\", \"pattern\":\"West Chestertenfieldville\"},\n",
+    "\n",
+    "]\n",
+    "\n",
+    "ruler.add_patterns(patterns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -41,12 +94,178 @@
     }
    ],
    "source": [
-    "doc = nlp(text)\n",
-    "\n",
-    "for ent in doc.ents:\n",
+    "doc2 = nlp(text)\n",
+    "for ent in doc2.ents:\n",
     "    print(ent.text, ent.label_)\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<spacy.pipeline.entityruler.EntityRuler at 0x14485b050>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nlp2 = spacy.load(\"en_core_web_sm\")\n",
+    "ruler"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Matcher vs EntityRuler\n",
+    "\n",
+    "The `Matcher` and `EntityRuler` are both used to find sequences of words in text using spaCy's `Doc` object. The `Matcher` is the lower-level API, which operates on `Token` objects and only lets you match on `Token` attributes like the text, lemma or entity label. The `EntityRuler` is a higher-level component that lets you match on whole entities and add them to the `Doc.ents` if they don't exist already. It also lets you add entity spans to the `Doc.ents` if they match a phrase list, and merge entities into single tokens."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from spacy.matcher import Matcher\n",
+    "\n",
+    "nlp = spacy.load(\"en_core_web_sm\")\n",
+    "matcher = Matcher(nlp.vocab)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pattern = [{\"LIKE_EMAIL\": True}]\n",
+    "matcher.add(\"EMAIL_ADDRESS\", [pattern])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "doc = nlp(\"This is my email address: vishwas-ml@gmail.com\")\n",
+    "matches = matcher(doc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(16571425990740197027, 6, 7)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(matches)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "EMAIL_ADDRESS\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(nlp.vocab[matches[0][0]].text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"data/wiki_us.txt\", \"r\") as f:\n",
+    "    text = f.read()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(3232560085755078826, 87, 89), (3232560085755078826, 86, 89), (3232560085755078826, 159, 161), (3232560085755078826, 185, 187), (3232560085755078826, 184, 187), (3232560085755078826, 206, 208), (3232560085755078826, 205, 208), (3232560085755078826, 228, 230), (3232560085755078826, 259, 261), (3232560085755078826, 258, 261), (3232560085755078826, 284, 286), (3232560085755078826, 283, 286), (3232560085755078826, 282, 286), (3232560085755078826, 326, 328), (3232560085755078826, 325, 328)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "matcher = Matcher(nlp.vocab)\n",
+    "pattern = [{\"POS\":\"PROPN\", \"OP\":\"+\"}, {\"POS\":\"VERB\"}]\n",
+    "matcher.add(\"PROPER_NOUNS\", [pattern])\n",
+    "doc = nlp(text)\n",
+    "matches = matcher(doc)\n",
+    "print(matches)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "States shares\n",
+      "United States shares\n",
+      "Indians migrated\n",
+      "States emerged\n",
+      "United States emerged\n",
+      "Britain led\n",
+      "Great Britain led\n",
+      "U.S. began\n",
+      "States spanned\n",
+      "United States spanned\n",
+      "War led\n",
+      "Civil War led\n",
+      "American Civil War led\n",
+      "States fought\n",
+      "United States fought\n"
+     ]
+    }
+   ],
+   "source": [
+    "for match in matches:\n",
+    "    print(doc[match[1]:match[2]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
